# DumpSource2

./: .gitmodules
src/main/: CMakeLists.txt  appframework.cpp
src/main/dumpers/module_metadata/: module_metadata.cpp
src/main/dumpers/schemas/: metadata_stringifier.cpp
